k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactions-service
  labels:
    app: transactions-service
spec:
  type: ClusterIP
  selector:
    app: transactions-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
